[package]
name = "heartlands2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simdnoise = "3.1.6"
kiss3d = "0.32.0"
nalgebra = "0.29.0"
serde = {version = "1.0.131", features = ["derive"]}
serde_json = "1.0.73"

