[package]
name = "mechants"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simdnoise = "3.1.6"
serde = {version = "1.0.131", features = ["derive"]}
serde_json = "1.0.73"
lerp = "0.3.0"
rand = "0.8.4"
futures = "0.1"
tokio = { version = "0.1" }
websocket = "0.22.0"
bincode = "1.3.3"
ears = "0.8.0"
rayon = "1.5.1"
[dependencies.sdl2]
version = "0.35.1"
default-features = false
features = ["mixer", "image", "ttf"]
